--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOSTNAME=heffalump.db.elephantsql.com
-DB_USERNAME=oayqkjuo
-DB_PASSWORD=9JzO_toj33-cTQqh7tImBqrPmDpTU4Ue
-DB_NAME=oayqkjuo
+DB_HOSTNAME=containers-us-west-104.railway.app
+DB_USERNAME=postgres
+DB_PASSWORD=yV4oo73nia7d5843uZJY
+DB_NAME=railway
 PORT=3002
-DB_PORT=5432
+DB_PORT=5656
 JWT_SECRET=contoh123OKE
